--- a/tensor01.ipynb
+++ b/tensor01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 87,
    "id": "5b95705e",
    "metadata": {},
    "outputs": [],
@@ -23,50 +23,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "b3aa05ea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: torch in c:\\users\\playdata2\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (2.9.0)\n",
-      "Requirement already satisfied: torchvision in c:\\users\\playdata2\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (0.24.0)\n",
-      "Requirement already satisfied: filelock in c:\\users\\playdata2\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from torch) (3.20.0)\n",
-      "Requirement already satisfied: typing-extensions>=4.10.0 in c:\\users\\playdata2\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from torch) (4.15.0)\n",
-      "Requirement already satisfied: sympy>=1.13.3 in c:\\users\\playdata2\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from torch) (1.14.0)\n",
-      "Requirement already satisfied: networkx>=2.5.1 in c:\\users\\playdata2\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from torch) (3.5)\n",
-      "Requirement already satisfied: jinja2 in c:\\users\\playdata2\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from torch) (3.1.6)\n",
-      "Requirement already satisfied: fsspec>=0.8.5 in c:\\users\\playdata2\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from torch) (2025.9.0)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\playdata2\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from torch) (80.9.0)\n",
-      "Requirement already satisfied: numpy in c:\\users\\playdata2\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from torchvision) (2.3.4)\n",
-      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in c:\\users\\playdata2\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from torchvision) (12.0.0)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in c:\\users\\playdata2\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from sympy>=1.13.3->torch) (1.3.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\playdata2\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from jinja2->torch) (3.0.3)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %pip install torch torchvision"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 89,
    "id": "b68509c3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0., 0., 0., 0.],\n",
-       "        [0., 0., 0., 0.],\n",
-       "        [0., 0., 0., 0.]])"
+       "tensor([[0.5467, 1.6155, 1.5689, 0.3604],\n",
+       "        [0.6585, 0.9415, 1.6128, 1.0934],\n",
+       "        [1.0343, 0.4105, 0.9633, 1.2134]])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,10 +60,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "6fc2591b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.4320, 0.8433, 0.5037, 0.9727],\n",
+       "        [0.6048, 0.7251, 0.0330, 0.8630],\n",
+       "        [0.7857, 0.7978, 0.9194, 0.1344]])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 랜덤 텐서\n",
     "x = torch.rand(3,4)\n",
@@ -93,10 +85,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "e3ee17ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 0으로 텐서 초기화\n",
     "torch.zeros(3,4,dtype=torch.long)"
@@ -104,10 +109,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "93cf2b09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1로 채워진 텐서\n",
     "x = torch.ones(3,4, dtype=torch.long)\n",
@@ -116,10 +134,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "f3ad6aa4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([3.5000, 3.0000, 2.1000])\n",
+      "[3.5 3.  2.1]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "print( torch.tensor( [3.5,3,2.1] ) )\n",
@@ -128,10 +155,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "e8c83689",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[1., 1., 1., 1.],\n",
+       "         [1., 1., 1., 1.],\n",
+       "         [1., 1., 1., 1.]]),\n",
+       " tensor([[ 0.6410, -0.2444, -0.0215,  2.0130],\n",
+       "         [-0.3597, -0.8308, -1.3207, -0.6646],\n",
+       "         [-0.1310, -0.4459,  0.2628, -1.8682]]))"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 기존의 텐서를 기반으로 새로운 텐서 생성\n",
     "x = torch.ones(3,4)\n",
@@ -141,10 +184,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "a164fc79",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0.4731, 0.1955, 0.3305, 0.6991],\n",
+       "         [0.8344, 0.2819, 0.1961, 0.7160],\n",
+       "         [0.8188, 0.5689, 0.9699, 0.8560]]),\n",
+       " tensor([[0.4749, 0.9788, 0.9923, 0.4208],\n",
+       "         [0.4247, 0.8628, 0.2520, 0.5531],\n",
+       "         [0.8759, 0.1953, 0.3265, 0.2169]]),\n",
+       " tensor([[0.9480, 1.1743, 1.3228, 1.1199],\n",
+       "         [1.2591, 1.1447, 0.4481, 1.2691],\n",
+       "         [1.6948, 0.7642, 1.2964, 1.0730]]))"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import torch\n",
     "x = torch.rand(3,4)\n",
@@ -154,20 +216,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "b07e47bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.9480, 1.1743, 1.3228, 1.1199],\n",
+       "        [1.2591, 1.1447, 0.4481, 1.2691],\n",
+       "        [1.6948, 0.7642, 1.2964, 1.0730]])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "torch.add(x,y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "7d014d10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.9480, 1.1743, 1.3228, 1.1199],\n",
+       "        [1.2591, 1.1447, 0.4481, 1.2691],\n",
+       "        [1.6948, 0.7642, 1.2964, 1.0730]])"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#in-place   y = y + x   y += x\n",
     "y.add_(x)"
@@ -175,20 +263,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "79ee2d69",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.9480, 1.1743, 1.3228, 1.1199],\n",
+       "        [1.2591, 1.1447, 0.4481, 1.2691],\n",
+       "        [1.6948, 0.7642, 1.2964, 1.0730]])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "d1a4eb96",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0.8830, 0.6789, 0.2227, 0.3339],\n",
+       "         [0.7280, 0.0089, 0.5989, 0.8301],\n",
+       "         [0.3991, 0.2501, 0.4952, 0.5353]]),\n",
+       " tensor([[0.1350, 0.2766, 0.8705, 0.3887, 0.2504],\n",
+       "         [0.4335, 0.6573, 0.2348, 0.2376, 0.7417],\n",
+       "         [0.5468, 0.0991, 0.1792, 0.5472, 0.2221],\n",
+       "         [0.6468, 0.4583, 0.7412, 0.7605, 0.7203]]),\n",
+       " tensor([[0.7513, 0.8656, 1.2156, 0.8804, 1.0147],\n",
+       "         [0.9666, 0.6470, 1.3584, 1.2441, 0.9199],\n",
+       "         [0.7793, 0.5692, 0.8917, 0.8926, 0.7810]]),\n",
+       " tensor([[0.7513, 0.8656, 1.2156, 0.8804, 1.0147],\n",
+       "         [0.9666, 0.6470, 1.3584, 1.2441, 0.9199],\n",
+       "         [0.7793, 0.5692, 0.8917, 0.8926, 0.7810]]))"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 행렬 곱셈 \n",
     "x = torch.rand(3,4)\n",
@@ -198,14 +322,289 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "9db8e368",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0.1971), 0.1970820426940918, torch.Tensor, float)"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 슬라이싱 가능\n",
     "x = torch.rand(4,5)\n",
     "x[1,1], x[1,1].item(), type(x[1,1]), type(x[1,1].item() )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "3d9115a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0.7266, 0.9107, 0.9443, 0.8031],\n",
+       "         [0.3916, 0.8580, 0.3068, 0.2161],\n",
+       "         [0.5493, 0.4008, 0.3663, 0.2296],\n",
+       "         [0.9811, 0.3051, 0.9835, 0.1724]]),\n",
+       " tensor([0.7266, 0.9107, 0.9443, 0.8031, 0.3916, 0.8580, 0.3068, 0.2161, 0.5493,\n",
+       "         0.4008, 0.3663, 0.2296, 0.9811, 0.3051, 0.9835, 0.1724]),\n",
+       " torch.Size([4, 4]),\n",
+       " torch.Size([16]))"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 텐서 크기 변경 reshapem view   numpy 동일한 기능 reshape\n",
+    "x = torch.rand(4,4)\n",
+    "y = x.view(-1) # -1 자동계산\n",
+    "x, y, x.shape, y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "f19ee304",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0.7266, 0.9107, 0.9443, 0.8031, 0.3916, 0.8580, 0.3068, 0.2161],\n",
+       "         [0.5493, 0.4008, 0.3663, 0.2296, 0.9811, 0.3051, 0.9835, 0.1724]]),\n",
+       " torch.Size([4, 4]))"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# x  4 by 4\n",
+    "# view : reshape # 텐서 모양 변경\n",
+    "# size : shape # 텐서 모양 확인\n",
+    "# 가독성  view size 사용되었다는 것은 해당 자료구조가 텐서라는 것을 명시\n",
+    "x.view(-1, 8), x.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "cc369c20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 1.], dtype=float32)"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 텐서 -> 넘파이\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "a = torch.ones(5)\n",
+    "a.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "d1b30421",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 넘파이 -> 텐서\n",
+    "a = np.array([1,2,3,4,5])\n",
+    "b = torch.from_numpy(a)\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "0d16860f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA를 사용할 수 없습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# GPU 사용\n",
+    "import torch\n",
+    "if torch.cuda.is_available():\n",
+    "    device = torch.device('cuda') # gpu\n",
+    "    # 텐서들은 gpu에서 연산되기 떄문에 생성을 gpu에서 생성\n",
+    "    x = torch.ones(5, device=device) # gpu\n",
+    "    y = torch.ones(5) # cpu\n",
+    "    y = y.to(device) # cpu->gpu로 이동\n",
+    "    z = x + y # gpu, cpu에 있으면 연산이 안됨\n",
+    "    print(f'GPU 연산결과 : {z}')\n",
+    "    print(f'다시 CPU로 : {z.to(\"cpu\", torch.double) }')\n",
+    "else:\n",
+    "    print('CUDA를 사용할 수 없습니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "8c9c7450",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 행렬의 곱\n",
+    "# ( x,y ) * ( x1,y1 )\n",
+    "# y, x1의 차수는 같아야한다\n",
+    "# 행렬 곱의 결과는 x , y1\n",
+    "\n",
+    "# 텐서는 딥러닝을 위해 만든 자료구조, 내부에 gpu 연산에 특화된 구조, 일반적인 모양은 넘파이와 동일\n",
+    "# 텐서는 gpu연산을 지원"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "f3cd73ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 자동 미분(Autograd) 매 계산과정마다 해당 계산과정의 미분값을 저장\n",
+    "# 파이토치 requires_grad = True 로 설정하면 계산그래프라는 형태로 기록 - 동영상 녹화와 비슷한 원리\n",
+    "# .backword() 호출하면 이 과정을 거꾸로 되감으면서 각 단계의 미분값을 계산해서 최종 기울기를 얻는다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "c080d93d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[1., 1.],\n",
+       "         [1., 1.]], requires_grad=True),\n",
+       " torch.Size([2, 2]))"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.ones(2,2, requires_grad=True)\n",
+    "x, x.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "35dbeaf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[3., 3.],\n",
+      "        [3., 3.]], grad_fn=<AddBackward0>) <AddBackward0 object at 0x000002019814ABC0>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[27., 27.],\n",
+       "         [27., 27.]], grad_fn=<MulBackward0>),\n",
+       " tensor(27., grad_fn=<MeanBackward0>))"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = x + 2  # y도 계산 그래프에 추가\n",
+    "print(y, y.grad_fn)\n",
+    "z = y*y*3\n",
+    "out = z.mean()\n",
+    "z, out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "bb35853a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[4.5000, 4.5000],\n",
+       "        [4.5000, 4.5000]])"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 기울기 구하는 과정을 역전파 --> 기울기 계산\n",
+    "# 최종결과가 out에서부터 시작해서 계산그래프를 거꾸로 거슬러 올라가면서 미분의 연쇄법칙을 사용해서 미분값을 계산\n",
+    "# out을 x에 대해서 미분\n",
+    "out.backward()\n",
+    "x.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "959308a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# out = 1/4(z1+z2+z3+z4)\n",
+    "# z = 3y^2\n",
+    "# y = x + 2\n",
+    "\n",
+    "# d-out/dxi = "
    ]
   }
  ],
