--- a/tensor01.ipynb
+++ b/tensor01.ipynb
@@ -606,6 +606,96 @@
     "\n",
     "# d-out/dxi = "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "483eb649",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.1781, 0.6369, 0.4731], requires_grad=True)\n",
+      "y: tensor([ 364.6683, 1304.3933,  968.8414], grad_fn=<MulBackward0>)\n",
+      "반복횟수 : 10   y = x*2^i+1\n",
+      "x.grad: tensor([2.0480e+02, 2.0480e+03, 2.0480e-01])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 기울기를 제어\n",
+    "# 역전파, torch.no_grad, detach\n",
+    "# requires_grad = True 연산 추적\n",
+    "import torch\n",
+    "x = torch.rand(3, requires_grad = True)\n",
+    "print(x)\n",
+    "# y는 x로부터 연산기록을 물려받음\n",
+    "y = x * 2\n",
+    "# 노름(유클리드 노름) 벡터의 크기를 측정하는 방법(원점으로부터 벡터까지의 거리) 모든 요소를 각각 제곱하고 모두 더해서 결과에 제곱근(루트)\n",
+    "# y의 실제 데이터의 크기를 확인해서 반복\n",
+    "i = 0\n",
+    "while y.data.norm() < 1000:\n",
+    "    y = y*2\n",
+    "    i += 1 \n",
+    "print(f'y: {y}')\n",
+    "print(f'반복횟수 : {i}   y = x*2^i+1')\n",
+    "\n",
+    "# 벡터에 대한 역전파 (야코비안 행렬)\n",
+    "# 벡터를 벡터로 미분하면 결과는 행렬인 아코비안 행렬\n",
+    "# pytorch는 전체 야코비안 행렬을 직접 계산하는 대신 야코비안 - 벡터 곱을 계산해서 메모리를 절약\n",
+    "v = torch.tensor([0.1, 1.0, 0.0001], dtype=torch.float)\n",
+    "y.backward(v) # y를 x에 대해 미분한 야코비안 행렬과 입력으로 제공된 벡터 v를 곱하라는 의미\n",
+    "# Vt * \n",
+    "print(f'x.grad: {x.grad}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c913809e",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "스칼라 백워드 Scalar Backward  : 역전파로 구하는 기울기가 하나일때\n",
+    "out.backward()\n",
+    "최종점수가 숫자하나  ex) 수학공부 1시간했을때 최종점수에 몇점의 영향을 줬는지\n",
+    "최종 목표가 하나(스칼라) 이기 때문에 각 원인\n",
+    "\n",
+    "벡터 백워드 Vector Backward : 기울기가 여러개 일때\n",
+    "y.backward(v)\n",
+    "과목별(국영수) 점수가 담긴 성적표(벡터)   공부시간이 성적에 얼마나 영향을 줬는지 물어보면 애매함 국어?영어?\n",
+    "가중치 또는 중요도를 알려주는 벡터 v = torch.tensor([0.1, 1.0, 0.0001], dtype=torch.float)\n",
+    "중요도를 반영해서 최종적으로 공부시간의 기여도를 확인\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "020248af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no_grad 내부: False\n",
+      "detach 전 True\n",
+      "detach 후 False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 각 학습을 진행하면서 도중에 모델의 성능 평가가 필요 - 기울기 계산을 하면 안됨\n",
+    "with torch.no_grad():\n",
+    "    print(f'no_grad 내부: {(x**2).requires_grad}') \n",
+    "\n",
+    "# .detach()  계산그래프에서 텐서를 분리\n",
+    "print(f'detach 전 {y.requires_grad}')\n",
+    "y = x.detach()\n",
+    "print(f'detach 후 {y.requires_grad}')"
+   ]
   }
  ],
  "metadata": {
