cnn model upgrade

--- a/models.ipynb
+++ b/models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 51,
    "id": "16ad2405",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 52,
    "id": "7d9fb76f",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
        " 'wide_resnet50_2']"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 53,
    "id": "a6c0d299",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 54,
    "id": "04c95ffc",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 55,
    "id": "cfd6ee21",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
        ")"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 56,
    "id": "e96c95a0",
    "metadata": {},
    "outputs": [],
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 57,
    "id": "ad17bb07",
    "metadata": {},
    "outputs": [],
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 58,
    "id": "2bba8f8b",
    "metadata": {},
    "outputs": [],
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 59,
    "id": "69b730dd",
    "metadata": {},
    "outputs": [],
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 60,
    "id": "572dcbe2",
    "metadata": {},
    "outputs": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 61,
    "id": "a90cde9e",
    "metadata": {},
    "outputs": [
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 62,
    "id": "eb198e46",
    "metadata": {},
    "outputs": [
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 63,
    "id": "5ba3f90a",
    "metadata": {},
    "outputs": [
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 64,
    "id": "c9db5e3a",
    "metadata": {},
    "outputs": [
@@ -854,7 +854,7 @@
        " Conv2d(1, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1)))"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 65,
    "id": "63e25599",
    "metadata": {},
    "outputs": [
@@ -875,7 +875,7 @@
        "torch.Size([1, 32, 28, 28])"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 66,
    "id": "982beded",
    "metadata": {},
    "outputs": [
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 67,
    "id": "d2a72f9c",
    "metadata": {},
    "outputs": [
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 68,
    "id": "fda078ba",
    "metadata": {},
    "outputs": [
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 69,
    "id": "55d4ba52",
    "metadata": {},
    "outputs": [
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 70,
    "id": "52b57c8e",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 71,
    "id": "8bddd834",
    "metadata": {},
    "outputs": [],
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 72,
    "id": "83ec012f",
    "metadata": {},
    "outputs": [],
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 73,
    "id": "3deeee9a",
    "metadata": {},
    "outputs": [
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 74,
    "id": "7ca81137",
    "metadata": {},
    "outputs": [
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 75,
    "id": "e9661e7f",
    "metadata": {},
    "outputs": [],
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 76,
    "id": "c2b5ed8f",
    "metadata": {},
    "outputs": [
@@ -1174,7 +1174,7 @@
        "938"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,36 +1184,107 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7b852944",
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "42fc2d26",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# %conda install tqdm"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 78,
    "id": "290adaa7",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 938/938 [00:51<00:00, 18.08it/s]\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch : 1/5, Loss : 0.4346\n",
-      "Epoch : 2/5, Loss : 0.2791\n",
-      "Epoch : 3/5, Loss : 0.2335\n",
-      "Epoch : 4/5, Loss : 0.2005\n",
-      "Epoch : 5/5, Loss : 0.1739\n"
+      "Epoch : 1/5, Loss : 0.4219\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 938/938 [00:55<00:00, 16.79it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch : 2/5, Loss : 0.2715\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 938/938 [00:53<00:00, 17.43it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch : 3/5, Loss : 0.2235\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 938/938 [00:53<00:00, 17.63it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch : 4/5, Loss : 0.1933\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 938/938 [00:54<00:00, 17.31it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch : 5/5, Loss : 0.1662\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "# 훈련 루프\n",
+    "from tqdm import tqdm\n",
     "num_epochs = 5\n",
     "for epoch in range(num_epochs):\n",
     "    model.train() # 드랍아웃, 배치노말.. 기능성 레이어(층) 활성화\n",
     "    running_loss = 0.0\n",
-    "    for inputs, labels in train_loader:\n",
+    "    for inputs, labels in tqdm(train_loader):\n",
     "        inputs,labels = inputs.to(device), labels.to(device)\n",
     "        optimizer.zero_grad() # gradient 초기화\n",
     "        outputs = model(inputs) # 순전파 forward 호출 --> 예측\n",
@@ -1226,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 79,
    "id": "befdaadc",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1305,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test accuracy : 0.9165\n"
+      "test accuracy : 0.9163\n"
      ]
     }
    ],
@@ -1255,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 80,
    "id": "2d67dcaf",
    "metadata": {},
    "outputs": [
@@ -1268,7 +1339,7 @@
        " tensor([0, 7, 7, 8, 5]))"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,6 +1348,304 @@
     "X,y = next(iter(test_loader))\n",
     "_, predicted = torch.max(model(X), 1)\n",
     "predicted[:5], y[:5], predicted[-5:], y[-5:],"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3a2858b",
+   "metadata": {},
+   "source": [
+    "#### 컬러 이미지 C 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7727098e",
+   "metadata": {},
+   "source": [
+    "##### RGB 채널의 각각의 평균과 표준편차"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "67cfae08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n",
+      "tensor([0.4914, 0.4822, 0.4465])\n",
+      "tensor([0.2023, 0.1994, 0.2010])\n"
+     ]
+    }
+   ],
+   "source": [
+    "transform = transforms.Compose([transforms.ToTensor()])\n",
+    "\n",
+    "test = torchvision.datasets.CIFAR10(root='./data',train = True, \n",
+    "                                  download=True, transform=transform)\n",
+    "\n",
+    "mean = torch.zeros(3)\n",
+    "std = torch.zeros(3)\n",
+    "for data, _ in test:    \n",
+    "    mean += data.mean(dim=(1,2))\n",
+    "    std += data.std(dim=(1,2))\n",
+    "print(mean / len(test))\n",
+    "print(std / len(test) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "0f8eec44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.4914008 , 0.482159  , 0.44653094], dtype=float32)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(mean / len(test)).cpu().numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4d006fa",
+   "metadata": {},
+   "source": [
+    "##### 학습/검증/테스트 데이터 로더"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "9dc06bbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
+   "source": [
+    "rgb_mean = mean / len(test)\n",
+    "rgb_std = std / len(test)\n",
+    "transform = transforms.Compose([transforms.ToTensor(),\n",
+    "                                transforms.Normalize(rgb_mean, rgb_std)])\n",
+    "full_train_dataset = torchvision.datasets.CIFAR10(root='./data',train = True, \n",
+    "                                  download=True, transform=transform)\n",
+    "test_dataset = torchvision.datasets.CIFAR10(root='./data',train = False, \n",
+    "                                  download=True, transform=transform)\n",
+    "\n",
+    "from torch.utils.data import random_split\n",
+    "# train/val 분할 : 8:2\n",
+    "train_size = int(len(full_train_dataset) * 0.8) \n",
+    "val_size = len(train_dataset) - train_size\n",
+    "train_dataset, val_dataset = random_split(full_train_dataset, [train_size, val_size]) \n",
+    "\n",
+    "\n",
+    "train_loader =  DataLoader(train_dataset, batch_size=128,shuffle=True)\n",
+    "val_loader =  DataLoader(val_dataset, batch_size=128,shuffle=False)\n",
+    "test_loader =  DataLoader(test_dataset, batch_size=128,shuffle=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79df991d",
+   "metadata": {},
+   "source": [
+    "##### 컬러이미지 처리 cnn 모델구현\n",
+    "- 손실함수\n",
+    "- 옵티마이저\n",
+    "- 스케줄러"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "09e252a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 모델클래스\n",
+    "# 손실함수\n",
+    "# 역전파를 위한 옵티마이저\n",
+    "# 학습루프\n",
+    "# 평가\n",
+    "# 예측"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "aebe1736",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CNN_CIFAR10(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(CNN_CIFAR10, self).__init__() \n",
+    "        self.conv1 = nn.Conv2d(3,32,3,padding=1)   \n",
+    "        self.conv2 = nn.Conv2d(32,64,3,padding=1)\n",
+    "        self.pool = nn.MaxPool2d(2)        \n",
+    "        self.fc1 = nn.Linear( 64*8*8, 128)\n",
+    "        self.fc2 = nn.Linear(128 , 10)\n",
+    "    def forward(self,x):        \n",
+    "        x = self.pool(F.relu(self.conv1(x))) \n",
+    "        x = self.pool(F.relu(self.conv2(x))) \n",
+    "        x = x.view(x.size(0),-1)\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        out = self.fc2(x)\n",
+    "        return out\n",
+    "cnn_cifar10_model = CNN_CIFAR10()\n",
+    "device = torch.device('cuda'  if torch.cuda.is_available() else 'cpu')\n",
+    "cnn_cifar10_model.to(device)\n",
+    "criterion = nn.CrossEntropyLoss()  # 손실함수  내부에 소프트맥스 + 로그손실계산 다중클래스 계산\n",
+    "optimizer = optim.Adam(cnn_cifar10_model.parameters(), lr = 0.001)\n",
+    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=7, gamma=0.1)  # 매번 7epoch lr*0.1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abd9a415",
+   "metadata": {},
+   "source": [
+    "#### EarlyStoppping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "e8aa15a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EarlyStopping:\n",
+    "    def __init__(self, patience=5, min_delta=0):\n",
+    "        self.patience = patience\n",
+    "        self.min_delta = min_delta\n",
+    "        self.counter = 0\n",
+    "        self.best_loss = float('inf')\n",
+    "    def __call__(self, val_loss):\n",
+    "        if val_loss < self.best_loss - self.min_delta:\n",
+    "            self.best_loss = val_loss\n",
+    "            self.counter = 0\n",
+    "        else:\n",
+    "            self.counter += 1\n",
+    "            if self.counter >= self.patience:\n",
+    "                return True # 조기종료\n",
+    "        return False\n",
+    "    \n",
+    "early_stopping = EarlyStopping()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f78adc01",
+   "metadata": {},
+   "source": [
+    "#### 훈련/검증 함수(accuracy 포함)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "559c376f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm import tqdm\n",
+    "def train_epoch(model, loader, criterion, optimizer, device):\n",
+    "    model.train()  # 드랍아웃, 배치노말.. 기능성 레이어(층) 활성화\n",
+    "    running_loss = 0.0\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    iterator =  tqdm(enumerate(loader),total = len(loader),desc='Train'  )\n",
+    "    for batch_idx, (inputs, labels) in iterator:                \n",
+    "        inputs,labels =  inputs.to(device), labels.to(device)\n",
+    "        optimizer.zero_grad() # 그레디언트 초기화\n",
+    "        outputs = model(inputs)  # 순전파 forward 호출 --> 예측\n",
+    "        loss = criterion(outputs,labels) # 손실계산\n",
+    "        loss.backward()  # 역전파(그레이던트 계산)\n",
+    "        optimizer.step() # 파라메터(가중치)를 업데이트\n",
+    "        running_loss += loss.item()\n",
+    "\n",
+    "        _,predicted =  torch.max(outputs.data,1)\n",
+    "        total += labels.size(0)\n",
+    "        correct += (predicted == labels).sum().item()  # 계산그래프에서 빠짐..\n",
+    "        iterator.set_postfix({'loss' : f'{loss.item():.3f}',\n",
+    "                             'acc':f'{correct/total:.3f}'})\n",
+    "    avg_loss = running_loss / len(loader)\n",
+    "    accuracy = correct / total\n",
+    "    return avg_loss,accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0a02983",
+   "metadata": {},
+   "source": [
+    "#### 훈련루프"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "840bcc00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train: 100%|██████████| 313/313 [00:30<00:00, 10.21it/s, loss=0.147, acc=0.940]\n",
+      "Train: 100%|██████████| 313/313 [00:30<00:00, 10.35it/s, loss=0.157, acc=0.940]\n",
+      "Train: 100%|██████████| 313/313 [00:30<00:00, 10.27it/s, loss=0.092, acc=0.940]\n",
+      "Train: 100%|██████████| 313/313 [00:29<00:00, 10.46it/s, loss=0.147, acc=0.940]\n",
+      "Train: 100%|██████████| 313/313 [00:30<00:00, 10.23it/s, loss=0.302, acc=0.940]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Early Stopping epoch : 5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 훈련 루프\n",
+    "num_epochs = 20\n",
+    "best_val_loss = float('inf')\n",
+    "for epoch in range(num_epochs):\n",
+    "    train_loss, train_acc = train_epoch(model, train_loader, criterion, optimizer, device)\n",
+    "    scheduler.step() # 스케줄러 업데이트\n",
+    "\n",
+    "    # early stopping check\n",
+    "    if early_stopping(best_val_loss):\n",
+    "        print(f'Early Stopping epoch : {epoch + 1}')\n",
+    "        break"
    ]
   }
  ],
