dl sigmoid softmax

--- a/model3.ipynb
+++ b/model3.ipynb
@@ -1540,16 +1540,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 181,
    "id": "5678e7c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.9526, 0.7311, 0.5250]) tensor(2.2086)\n",
+      "tensor([0.8401, 0.1137, 0.0462]) tensor(1.)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\playdata2\\AppData\\Local\\Temp\\ipykernel_6472\\3152459191.py:10: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  print(F.softmax(output), sum(F.softmax(output)))\n"
+     ]
+    }
+   ],
    "source": [
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "\n",
     "# sigmoid softmax\n",
     "# class_1, class_2, class_3\n",
     "output = torch.tensor([3.0, 1.0, 0.1])\n",
     "# sigmoid 개별적으로 적용(0~1) 각 요소가 독립적이어서 여러개가 정답일수\n",
-    "# softmax 전체의 합이 1 -> 서로 경쟁하는 구조\n"
+    "print(F.sigmoid(output), sum(F.sigmoid(output)))\n",
+    "# softmax 전체의 합이 1 -> 서로 경쟁하는 구조\n",
+    "print(F.softmax(output), sum(F.softmax(output)))\n"
    ]
   }
  ],
