--- a/model8.ipynb
+++ b/model8.ipynb
@@ -83,6 +83,34 @@
     "down_x = downsample(x_)\n",
     "down_x.size()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "181d79cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "class BasicBlock(nn.Module):\n",
+    "    def __init__(self, in_channel, out_channel, hidden_dim):\n",
+    "        super(BasicBlock, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(in_channel, hidden_dim, kernel_size=3, padding=1)\n",
+    "        self.conv2 = nn.Conv2d(hidden_dim, out_channel, kernel_size=3, padding=1)\n",
+    "        self.batch1 = nn.BatchNorm2d(hidden_dim)\n",
+    "        self.batch2 = nn.BatchNorm2d(out_channel)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.downsample = nn.Conv2d(in_channel,out_channel,kernel_size=1)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x_ = x\n",
+    "        x = self.relu(self.batch1(self.conv1(x)))\n",
+    "        x = self.batch2(self.conv2(x))\n",
+    "        x += x_\n",
+    "        out = self.relu(x)\n",
+    "        return out"
+   ]
   }
  ],
  "metadata": {
