rnn loop training

--- a/model8.ipynb
+++ b/model8.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "eea3995f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# RestNet(Skip connection, Regidual Block)  잔차를 레이어에 더해준다"
+    "# ResNet(Skip connection, Regidual Block)  잔차를 레이어에 더해준다"
    ]
   },
   {
